[FIX] mail: correct z-index stacking for dialogs in mobile chat windows
Before this commit, dialogs triggered by message actions were rendered beneath
the chat window in mobile view due to incorrect z-index hierarchy. This created
a confusing UX where users had no visual feedback, only discovering the hidden
dialog after minimizing the chat window. Additionally, the chat hub bubble
button was appearing above the chat window.

This commit adjusts the z-index values to ensure dialogs are properly elevated
above the chat window layer, restoring the expected stacking context and
enabling direct interaction with modal dialogs.

Backport of #235852

task-5208322

--- a/addons/mail/static/src/core/common/chat_hub.scss
+++ b/addons/mail/static/src/core/common/chat_hub.scss
@@ -10,11 +10,7 @@
     &.o-mobile {
         margin-right: $o-mail-ChatHub-bubblesMargin + 5px;
         --mail-ChatHub-bubbles-bottomLift: 35px;
-
-        body:has(.o-mail-Discuss):not(:has(.o-mail-ChatWindow)) &, body:has(.o-mail-MessagingMenu):not(:has(.o-mail-ChatWindow)) &  {
-            --mail-ChatHub-bubbles-bottomLift: 65px;
-            z-index: $zindex-modal + 5;
-        }
+        z-index: $o-mail-NavigableList-zIndex - 1;
     }
 }
 
